--- a/Game/Game.vcxproj
+++ b/Game/Game.vcxproj
@@ -163,8 +163,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Source\Components\CharacterComponent.cpp" />
     <ClCompile Include="Source\Components\PlayerComponent.cpp" />
     <ClCompile Include="Source\Components\RocketComponent.cpp" />
+    <ClCompile Include="Source\Components\SuperComponent.cpp" />
     <ClCompile Include="Source\Main.cpp" />
     <ClCompile Include="Source\SpaceGame.cpp" />
   </ItemGroup>
@@ -174,12 +176,16 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Source\Components\CharacterComponent.h" />
     <ClInclude Include="Source\Components\PlayerComponent.h" />
     <ClInclude Include="Source\Components\RocketComponent.h" />
+    <ClInclude Include="Source\Components\SuperComponent.h" />
     <ClInclude Include="Source\SpaceGame.h" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\Build\Assets\scenes\game.json" />
     <None Include="..\Build\Assets\scenes\scene.json" />
+    <None Include="..\Build\Assets\scenes\tilemap.json" />
     <None Include="cpp.hint" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
