--- a/Game/Game.vcxproj.filters
+++ b/Game/Game.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="Source\Components\SuperComponent.cpp">
       <Filter>Source Files\Components</Filter>
     </ClCompile>
+    <ClCompile Include="Source\Components\EnemyComponent.cpp">
+      <Filter>Source Files\Components</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Components\PlayerComponent.h">
@@ -53,16 +56,22 @@
     <ClInclude Include="Source\Components\SuperComponent.h">
       <Filter>Source Files\Components</Filter>
     </ClInclude>
+    <ClInclude Include="Source\Components\EnemyComponent.h">
+      <Filter>Source Files\Components</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="cpp.hint" />
-    <None Include="..\Build\Assets\scenes\scene.json">
+    <None Include="..\Build\Assets\scenes\title.json">
       <Filter>Resource Files</Filter>
     </None>
     <None Include="..\Build\Assets\scenes\tilemap.json">
       <Filter>Resource Files</Filter>
     </None>
     <None Include="..\Build\Assets\scenes\game.json">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="..\Build\Assets\scenes\endGame.json">
       <Filter>Resource Files</Filter>
     </None>
   </ItemGroup>
